# Models-parametrization-lib

./: CMakeLists.txt  README.md  doxygen_config
include/: basis.h  math_functions.h  model.h  param.hpp  vectors.h  worker.h
source/: math_functions.cpp  model.cpp  worker.cpp
tests/: .test.cpp.swp  CMakeLists.txt  test.cpp
tests/opengl-sample/: CMakeLists.txt  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  common.h  opengl-sample.cpp
tests/vtk-sample/: CMakeLists.txt  example_trackballcamera.cpp  functions.h  vtk-sample.cpp
